--- a/src/components/LoaderButton.css
+++ b/src/components/LoaderButton.css
@@ -1,14 +1,23 @@
 .LoaderButton .spinning.glyphicon {
   margin-right: 7px;
   top: 2px;
-  animation: spin 1s infinite linear;
+  animation: spin 1.3s infinite linear;
 }
 
 @keyframes spin {
-  from {
+  0% {
     transform: scale(1) rotate(0deg);
   }
-  to {
+  25% {
+    transform: scale(1.2) rotate(90deg);
+  }
+  50% {
+    transform: scale(1.3) rotate(180deg);
+  }
+  75% {
+    transform: scale(1.2) rotate(270deg);
+  }
+  100% {
     transform: scale(1) rotate(360deg);
   }
 }
